@@ -131,5 +131,6 @@ If you get stuck, you can ask for help in the Plugin Forum.
 = 6.2.0 - 2022-xx-xx =
 * Add - Add onboarding payment gateway setup methods.
 * Fix - Enable Stripe payment method after connecting account.
+* Fix - Missing statement descriptor in account summary API when not set in Stripe.
 
 [See changelog for all versions](https://raw.githubusercontent.com/woocommerce/woocommerce-gateway-stripe/trunk/changelog.txt).
